# try_stuff

./: .clang-format  .gitignore  README.md
garbage_collector/: README.md  main  main.cpp
jit/: README.md  funcall.cpp  hello.cpp
win_man/: CMakeLists.txt  README.md  main.cpp  run.sh  win_man.sh  window_manager.cpp  window_manager.h
xlib/: CMakeLists.txt  README.md  main.cpp  mouse_move.cpp  touch_move.cpp
